--- a/company-card.css
+++ b/company-card.css
@@ -4,16 +4,18 @@
                 display: grid;
                 grid-template-columns: repeat(auto-fill, minmax(320px, 1fr)); /* Responsive grid */
                 gap: 20px;
-                padding-left: 20px;
             }
             .company-card {
-                border: 1px solid #ddd;
+                /*border: 1px solid #ddd;*/
                 padding: 20px;
                 text-align: center;
-                background-color: #f9f9f9;
+                background-color: white;
+                /*background-color: #d8caca;*/
                 min-width: 300px;
-                cursor: pointer;
+                /*cursor: pointer;*/
                 position: relative;
+                border-radius: 8px;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             }
             .company-header {
                 display: flex;
